# eca

./: Cargo.toml  README.md  readme.md
src/: eca.rs  main.rs  writer.rs
src/snapshots/: eca__eca__tests__110_iterations.snap  eca__eca__tests__30_iterations.snap  eca__eca__tests__73_iterations.snap  eca__eca__tests__90_iterations.snap  eca__eca__tests__99_iterations.snap
