[package]
name = "eca"
version = "0.1.0"
edition = "2021"

description = "A cli tool to run  elementary cellular automatons"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kloki/eca"

[dependencies]
clap = { version = "4.4.12", features = ["derive"] }
image = "0.24.7"
rand = "0.8.5"
